# self-driving-materials-orchestrator

./: .bandit  .dockerignore  .editorconfig  .env.example  .env.production  .gitleaks.toml  .pre-commit-config.yaml  .safety-policy.json  ARCHITECTURE.md  AUTONOMOUS_SCHEDULE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETE_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_RESEARCH_REPORT.md  BACKLOG.md  CHANGELOG.md  CLAUDE_IMPROVEMENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_SUMMARY.md  Dockerfile  Dockerfile.jupyter  Dockerfile.production  ENHANCED_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_GENERATION_AI_ENHANCEMENTS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_COMPLETION_REPORT.md  SBOM.json  SDLC_ANALYSIS.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  (+34 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  INTEGRATION_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  robot_integration.yml
.terragon/: config.yaml  value-metrics.json
benchmarks/: __init__.py  test_core_performance.py  test_optimization_performance.py
configs/: development.env
deployment/docker/: Dockerfile.production
deployment/kubernetes/: production-deployment.yaml
docs/: DEVELOPMENT.md  DEVELOPMENT_SETUP.md  ROADMAP.md  SELF_HEALING_PIPELINE_GUIDE.md  TECHNICAL_DEBT.md  gen_ref_pages.py  index.md
examples/: autonomous_benchmarking_demo.py  autonomous_research_demo.py  autonomous_sdlc_validation.py  breakthrough_ai_discovery.py  enhanced_virtual_laboratory_demo.py  next_generation_ai_discovery.py  perovskite_discovery_example.py  robust_materials_discovery.py  self_healing_pipeline_demo.py  ultra_performance_materials_discovery.py
monitoring/: alert_rules.yml  grafana-dashboards.json  grafana-datasources.yml  health-checks.yml  logging-config.yml  opentelemetry-config.yaml  prometheus-prod.yml  prometheus.yml  recording_rules.yml
research/: autonomous_sdlc_research_paper.md  benchmarking_framework.py  quantum_self_healing_research.py  statistical_analysis.py
scripts/: automated-maintenance.py  autonomous_performance_benchmarks.py  build-docker.sh  collect-metrics.py  deploy.sh  init-mongo.js  quality_gates.py  repo-health-check.py  run_research_validation.py  run_research_validation_minimal.py  security-scan.sh  setup-dev-environment.sh  setup-dev.sh  validate-integration.py  validate_implementation.py
sdmo/: __init__.py  bayesian_optimizer.py  experiment_designer.py  experiment_loop.py  results_tracker.py  simulator.py
tests/: __init__.py  conftest.py  conftest_enhanced.py  test_claude_flow_7pgb7q.js  test_claude_flow_c3dwm7.js  test_comprehensive_integration.py  test_enhanced_implementation.py  test_next_generation_enhancements.py  test_production_readiness.py  test_quantum_enhanced_optimization.py  test_robustness_validation.py  test_scaling_optimization.py  test_sdmo.py  test_self_healing_pipeline_guard.py  test_suite.js  utils.py
venv_active/: pyvenv.cfg
venv_autonomous/: pyvenv.cfg
venv_enhanced/: pyvenv.cfg
venv_materials/: pyvenv.cfg
venv_new/: pyvenv.cfg
venv_new_sdlc/: pyvenv.cfg
venv_production/: pyvenv.cfg
venv_sdlc/: pyvenv.cfg
venv_terragon/: pyvenv.cfg
venv_tools/: pyvenv.cfg
(+129 files in other folders)
